--- a/index.html
+++ b/index.html
@@ -1,142 +1,215 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Ismael Full Stack Website Developer</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Ismael Abdulhakim | Full-Stack Web Developer</title>
 
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #0b0b0b;
-      color: #ffffff;
-    }
+<style>
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: #0f172a;
+  color: white;
+}
 
-    header {
-      padding: 40px 20px;
-      text-align: center;
-      background: linear-gradient(135deg, #111, #222);
-    }
+/* HERO */
+.hero {
+  text-align: center;
+  padding: 80px 20px;
+  animation: fadeIn 1.5s ease;
+}
 
-    header h1 {
-      font-size: 2.2em;
-      font-weight: bold;
-      letter-spacing: 2px;
-    }
+.hero h1 {
+  font-size: 3rem;
+  font-weight: bold;
+}
 
-    section {
-      padding: 30px 20px;
-      max-width: 1100px;
-      margin: auto;
-    }
+.hero h2 {
+  color: #38bdf8;
+  margin-top: 10px;
+}
 
-    .gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 20px;
-    }
+.hero p {
+  max-width: 600px;
+  margin: auto;
+  opacity: 0.9;
+}
 
-    .gallery img {
-      width: 100%;
-      border-radius: 12px;
-      cursor: pointer;
-      transition: transform 0.3s;
-    }
+.btn {
+  display: inline-block;
+  margin-top: 25px;
+  padding: 12px 28px;
+  background: #38bdf8;
+  color: black;
+  border-radius: 30px;
+  text-decoration: none;
+  font-weight: bold;
+  transition: transform 0.3s;
+}
 
-    .gallery img:hover {
-      transform: scale(1.03);
-    }
+.btn:hover {
+  transform: scale(1.1);
+}
 
-    .about {
-      margin-top: 40px;
-      line-height: 1.7;
-    }
+/* IMAGE SECTION */
+.projects {
+  padding: 60px 20px;
+  text-align: center;
+}
 
-    footer {
-      margin-top: 40px;
-      padding: 20px;
-      text-align: center;
-      background: #111;
-      font-size: 0.9em;
-    }
+.image-card {
+  width: 320px;
+  margin: auto;
+  background: #1e293b;
+  padding: 20px;
+  border-radius: 20px;
+  transition: transform 0.5s;
+}
 
-    /* Full image modal */
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 10;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0,0,0,0.9);
-    }
+.image-card:hover {
+  transform: rotateY(15deg) scale(1.05);
+}
 
-    .modal img {
-      display: block;
-      max-width: 90%;
-      max-height: 90%;
-      margin: 5% auto;
-      border-radius: 10px;
-    }
-  </style>
+.image-card img {
+  width: 100%;
+  border-radius: 15px;
+  cursor: pointer;
+}
+
+.image-card h3 {
+  margin-top: 15px;
+  color: #38bdf8;
+}
+
+/* ABOUT */
+.about {
+  padding: 60px 20px;
+  max-width: 900px;
+  margin: auto;
+}
+
+.about h2 {
+  text-align: center;
+  color: #38bdf8;
+}
+
+.about ul {
+  margin-left: 20px;
+}
+
+/* CONTACT */
+.contact {
+  padding: 50px 20px;
+  text-align: center;
+  background: #020617;
+}
+
+.contact a {
+  color: #38bdf8;
+  font-size: 1.1rem;
+  text-decoration: none;
+}
+
+/* MODAL */
+.modal {
+  display: none;
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.8);
+  justify-content: center;
+  align-items: center;
+}
+
+.modal img {
+  max-width: 90%;
+  border-radius: 20px;
+}
+
+/* ANIMATION */
+@keyframes fadeIn {
+  from {opacity:0; transform:translateY(30px);}
+  to {opacity:1; transform:translateY(0);}
+}
+</style>
 </head>
 
 <body>
 
-<header>
-  <h1>Ismael Full Stack Website Developer</h1>
-  <p>Professional Web Design • Modern UI • Real Projects</p>
-</header>
+<!-- HERO -->
+<section class="hero">
+  <h1>Ismael Abdulhakim</h1>
+  <h2>Full-Stack Web Developer</h2>
+  <p>
+    I build modern, fast, and income-focused websites that help businesses
+    grow online with confidence.
+  </p>
 
-<section>
-  <h2>My Work</h2>
+  <a href="https://ismaelabdulhakim54-glitch.github.io/ismael-website/"
+     target="_blank" class="btn">
+     🌍 Visit My Website
+  </a>
+</section>
 
-  <div class="gallery">
-    <img src="images/ss1.jpg" onclick="openImg(this)">
-    <img src="images/ss2.jpg" onclick="openImg(this)">
-    <img src="images/ss3.jpg" onclick="openImg(this)">
-  </div>
-
-  <div class="about">
-    <h2>About Me</h2>
+<!-- IMAGE -->
+<section class="projects">
+  <div class="image-card">
+    <img src="images/website-9049204_1280-1.jpg" onclick="openImage(this)">
+    <h3>Increase Your Online Income</h3>
     <p>
-      I am Ismael, a full stack website developer focused on building modern,
-      fast, and professional websites. I design and develop complete web solutions
-      including layout, responsiveness, user experience, and performance.
-    </p>
-
-    <p>
-      My goal is to help individuals and businesses grow online with clean,
-      effective, and visually strong websites.
-    </p>
-
-    <p>
-      📞 Phone: 2519 54 53 96 19 / 2519 11 46 41 68<br>
-      📧 Email: Ismaelabdulhakim54@gmail.com
+      When you work with me, your online presence becomes professional,
+      attractive, and designed to convert visitors into customers.
     </p>
   </div>
 </section>
 
-<footer>
-  © 2026 Ismael Web Developer • All Rights Reserved
-</footer>
+<!-- ABOUT -->
+<section class="about">
+  <h2>About Me</h2>
 
-<!-- Full image viewer -->
-<div class="modal" id="modal" onclick="closeImg()">
+  <p>
+    My name is <strong>Ismael Abdulhakim</strong>. I am a
+    <strong>Full-Stack Web Developer</strong> with real experience building
+    modern websites from idea to deployment.
+  </p>
+
+  <p>
+    I focus on clean design, performance, and business results. My goal
+    is not just to create websites, but to build platforms that help
+    clients increase trust, visibility, and income.
+  </p>
+
+  <h3>My Skills</h3>
+  <ul>
+    <li>HTML, CSS, JavaScript</li>
+    <li>Frontend animations & UI/UX</li>
+    <li>Backend basics (Node.js)</li>
+    <li>GitHub Pages deployment</li>
+  </ul>
+</section>
+
+<!-- CONTACT -->
+<section class="contact">
+  <h2>Contact Me</h2>
+  <p>
+    📧 <a href="mailto:Ismaelabdulhakim54@gmail.com">
+    Ismaelabdulhakim54@gmail.com</a>
+  </p>
+</section>
+
+<!-- MODAL -->
+<div id="imageModal" class="modal" onclick="closeImage()">
   <img id="modalImg">
 </div>
 
 <script>
-  function openImg(img) {
-    document.getElementById("modal").style.display = "block";
-    document.getElementById("modalImg").src = img.src;
-  }
-
-  function closeImg() {
-    document.getElementById("modal").style.display = "none";
-  }
+function openImage(img){
+  document.getElementById("imageModal").style.display="flex";
+  document.getElementById("modalImg").src=img.src;
+}
+function closeImage(){
+  document.getElementById("imageModal").style.display="none";
+}
 </script>
 
 </body>
