Added multiple images, WhatsApp, dark mode, testimonials, 3D

--- a/index.html
+++ b/index.html
@@ -6,209 +6,238 @@
 <title>Ismael Abdulhakim | Full-Stack Web Developer</title>
 
 <style>
-body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-  background: #0f172a;
-  color: white;
+:root{
+  --bg:#0f172a;
+  --text:#ffffff;
+  --card:#1e293b;
+  --accent:#38bdf8;
+}
+.light{
+  --bg:#f8fafc;
+  --text:#020617;
+  --card:#e5e7eb;
 }
 
-/* HERO */
-.hero {
-  text-align: center;
-  padding: 80px 20px;
-  animation: fadeIn 1.5s ease;
+body{
+  margin:0;
+  font-family:Arial,sans-serif;
+  background:var(--bg);
+  color:var(--text);
+  transition:0.4s;
 }
 
-.hero h1 {
-  font-size: 3rem;
-  font-weight: bold;
+/* HEADER */
+header{
+  text-align:center;
+  padding:70px 20px;
+}
+header h1{
+  font-size:3rem;
+}
+header h2{
+  color:var(--accent);
 }
 
-.hero h2 {
-  color: #38bdf8;
-  margin-top: 10px;
+/* BUTTONS */
+.btn{
+  padding:12px 26px;
+  background:var(--accent);
+  color:black;
+  border-radius:30px;
+  text-decoration:none;
+  font-weight:bold;
+  display:inline-block;
+  margin:10px;
 }
 
-.hero p {
-  max-width: 600px;
-  margin: auto;
-  opacity: 0.9;
+/* TOGGLE */
+.toggle{
+  position:fixed;
+  top:15px;
+  right:15px;
+  background:var(--accent);
+  color:black;
+  padding:8px 14px;
+  border-radius:20px;
+  cursor:pointer;
 }
 
-.btn {
-  display: inline-block;
-  margin-top: 25px;
-  padding: 12px 28px;
-  background: #38bdf8;
-  color: black;
-  border-radius: 30px;
-  text-decoration: none;
-  font-weight: bold;
-  transition: transform 0.3s;
+/* GALLERY */
+.gallery{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
+  gap:25px;
+  padding:40px;
 }
 
-.btn:hover {
-  transform: scale(1.1);
+.card{
+  background:var(--card);
+  padding:20px;
+  border-radius:20px;
+  text-align:center;
+  transition:0.5s;
+  transform-style:preserve-3d;
 }
-
-/* IMAGE SECTION */
-.projects {
-  padding: 60px 20px;
-  text-align: center;
+.card:hover{
+  transform:rotateY(12deg) scale(1.05);
 }
-
-.image-card {
-  width: 320px;
-  margin: auto;
-  background: #1e293b;
-  padding: 20px;
-  border-radius: 20px;
-  transition: transform 0.5s;
+.card img{
+  width:100%;
+  border-radius:15px;
+  cursor:pointer;
 }
-
-.image-card:hover {
-  transform: rotateY(15deg) scale(1.05);
-}
-
-.image-card img {
-  width: 100%;
-  border-radius: 15px;
-  cursor: pointer;
-}
-
-.image-card h3 {
-  margin-top: 15px;
-  color: #38bdf8;
+.card h3{
+  color:var(--accent);
 }
 
 /* ABOUT */
-.about {
-  padding: 60px 20px;
-  max-width: 900px;
-  margin: auto;
+.about{
+  max-width:900px;
+  margin:auto;
+  padding:40px;
 }
 
-.about h2 {
-  text-align: center;
-  color: #38bdf8;
+/* TESTIMONIALS */
+.testimonials{
+  padding:40px;
+  background:#020617;
 }
-
-.about ul {
-  margin-left: 20px;
+.test{
+  background:var(--card);
+  padding:20px;
+  border-radius:15px;
+  margin:15px 0;
 }
 
 /* CONTACT */
-.contact {
-  padding: 50px 20px;
-  text-align: center;
-  background: #020617;
-}
-
-.contact a {
-  color: #38bdf8;
-  font-size: 1.1rem;
-  text-decoration: none;
+.contact{
+  text-align:center;
+  padding:40px;
 }
 
 /* MODAL */
-.modal {
-  display: none;
-  position: fixed;
-  inset: 0;
-  background: rgba(0,0,0,0.8);
-  justify-content: center;
-  align-items: center;
+.modal{
+  display:none;
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,0.8);
+  justify-content:center;
+  align-items:center;
+}
+.modal img{
+  max-width:90%;
+  border-radius:20px;
 }
 
-.modal img {
-  max-width: 90%;
-  border-radius: 20px;
-}
-
-/* ANIMATION */
-@keyframes fadeIn {
-  from {opacity:0; transform:translateY(30px);}
-  to {opacity:1; transform:translateY(0);}
+/* WHATSAPP */
+.whatsapp{
+  position:fixed;
+  bottom:20px;
+  right:20px;
+  background:#25d366;
+  color:white;
+  padding:15px 20px;
+  border-radius:50px;
+  text-decoration:none;
+  font-weight:bold;
 }
 </style>
 </head>
 
 <body>
 
-<!-- HERO -->
-<section class="hero">
-  <h1>Ismael Abdulhakim</h1>
-  <h2>Full-Stack Web Developer</h2>
-  <p>
-    I build modern, fast, and income-focused websites that help businesses
-    grow online with confidence.
-  </p>
+<div class="toggle" onclick="toggleMode()">🌗 Mode</div>
 
-  <a href="https://ismaelabdulhakim54-glitch.github.io/ismael-website/"
-     target="_blank" class="btn">
-     🌍 Visit My Website
-  </a>
-</section>
+<header>
+<h1>Ismael Abdulhakim</h1>
+<h2>Full-Stack Web Developer</h2>
+<p>I build modern websites that increase trust, visibility, and income.</p>
+<a class="btn" href="https://ismaelabdulhakim54-glitch.github.io/ismael-website/" target="_blank">
+🌍 Visit My Website
+</a>
+</header>
 
-<!-- IMAGE -->
-<section class="projects">
-  <div class="image-card">
-    <img src="images/website-9049204_1280-1.jpg" onclick="openImage(this)">
-    <h3>Increase Your Online Income</h3>
-    <p>
-      When you work with me, your online presence becomes professional,
-      attractive, and designed to convert visitors into customers.
-    </p>
-  </div>
+<!-- IMAGES -->
+<section class="gallery">
+
+<div class="card">
+<img src="images/pexels-kevin-ku.jpg" onclick="openImg(this)">
+<h3>Clear Vision in Code</h3>
+<p>I see problems clearly and deliver precise solutions.</p>
+</div>
+
+<div class="card">
+<img src="images/website-income.jpg" onclick="openImg(this)">
+<h3>Increase Your Income</h3>
+<p>Your website becomes a money-making asset.</p>
+</div>
+
+<div class="card">
+<img src="images/mini-man-code.jpg" onclick="openImg(this)">
+<h3>Big Ideas, Clean Code</h3>
+<p>Even complex systems are handled professionally.</p>
+</div>
+
+<div class="card">
+<img src="images/coding-person.jpg" onclick="openImg(this)">
+<h3>Focused Development</h3>
+<p>Every line of code is written with purpose.</p>
+</div>
+
 </section>
 
 <!-- ABOUT -->
 <section class="about">
-  <h2>About Me</h2>
+<h2>About Me</h2>
+<p>
+I am <strong>Ismael Abdulhakim</strong>, a Full-Stack Web Developer who
+creates fast, modern, and professional websites.
+I focus on real-world results: visibility, credibility, and growth.
+</p>
+</section>
 
-  <p>
-    My name is <strong>Ismael Abdulhakim</strong>. I am a
-    <strong>Full-Stack Web Developer</strong> with real experience building
-    modern websites from idea to deployment.
-  </p>
+<!-- TESTIMONIALS -->
+<section class="testimonials">
+<h2>Client Testimonials</h2>
 
-  <p>
-    I focus on clean design, performance, and business results. My goal
-    is not just to create websites, but to build platforms that help
-    clients increase trust, visibility, and income.
-  </p>
+<div class="test">
+⭐️⭐️⭐️⭐️⭐️  
+“Professional, fast, and very creative. My business visibility increased.”
+</div>
 
-  <h3>My Skills</h3>
-  <ul>
-    <li>HTML, CSS, JavaScript</li>
-    <li>Frontend animations & UI/UX</li>
-    <li>Backend basics (Node.js)</li>
-    <li>GitHub Pages deployment</li>
-  </ul>
+<div class="test">
+⭐️⭐️⭐️⭐️⭐️  
+“He understands business, not just code.”
+</div>
 </section>
 
 <!-- CONTACT -->
 <section class="contact">
-  <h2>Contact Me</h2>
-  <p>
-    📧 <a href="mailto:Ismaelabdulhakim54@gmail.com">
-    Ismaelabdulhakim54@gmail.com</a>
-  </p>
+<h2>Contact</h2>
+<p>📧 Ismaelabdulhakim54@gmail.com</p>
+<p>📞 +251 9 54 53 96 19</p>
 </section>
 
-<!-- MODAL -->
-<div id="imageModal" class="modal" onclick="closeImage()">
-  <img id="modalImg">
+<!-- WHATSAPP -->
+<a class="whatsapp" href="https://wa.me/251954539619" target="_blank">
+💬 WhatsApp
+</a>
+
+<!-- IMAGE MODAL -->
+<div class="modal" id="modal" onclick="closeImg()">
+<img id="modalImg">
 </div>
 
 <script>
-function openImage(img){
-  document.getElementById("imageModal").style.display="flex";
-  document.getElementById("modalImg").src=img.src;
+function openImg(img){
+ document.getElementById("modal").style.display="flex";
+ document.getElementById("modalImg").src=img.src;
 }
-function closeImage(){
-  document.getElementById("imageModal").style.display="none";
+function closeImg(){
+ document.getElementById("modal").style.display="none";
+}
+function toggleMode(){
+ document.body.classList.toggle("light");
 }
 </script>
 
