Update 6 images + about section

--- a/index.html
+++ b/index.html
@@ -38,7 +38,13 @@
     </div>
   </section>
 
-  <!-- Full image modal -->
+  <section class="about">
+    <h2>About Me</h2>
+    <p>
+      I am Ismael, a full stack website developer with years of experience building websites that help businesses grow. I specialize in responsive design, 3D effects, animations, and creating user-friendly interfaces. My mission is to help clients increase their online presence and income through high-quality websites.
+    </p>
+  </section>
+
   <div id="fullImageModal" onclick="this.style.display='none'">
     <img id="fullImage" src="">
   </div>
